<resources>
    <string name="app_name">Garage</string>
    <string name="AppId">Bms2Me7c</string>

    <string name="Report">Отчет</string>
    <string name="TempHome">Квартира, t</string>
    <string name="TempStreet">Улица, t</string>
    <string name="TempPogrebok">Погребок, t</string>
    <string name="Pressure">Давление</string>
    <string name="EnergyConsumption">Расход э/э</string>
    <string name="AmountHours">Кол-во часов</string>
    <string name="PriceEnergy">Стоимость</string>
    <string name="Refresh">Обновить</string>
    <string name="Forecast">Прогноз, t</string>
    <string name="gradus">°C</string>
    <string name="TempMax">Max, t</string>
    <string name="TempMin">Min, t</string>
    <string name="Title_calendar">Данные с Календаря</string>
    <string name="Date_calendar">Дата:</string>
    <string name="Max_temp_calendar">Максимальная температура =</string>
    <string name="Min_temp_calendar">Минимальная температура =</string>
    <string name="Sign_screen">Авторизируйтесь</string>
    <string name="Email_pass">Garage1</string>
    <string name="Password_pass">12345</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
